# lobot_description_ros2

./: CMakeLists.txt  README.md  package.xml
gazebo/: gazebo.urdf.xacro  gazebo.urdf.xacro.ref
launch/: spawn_lobot.launch.py  spawn_lobot_paused.launch.py
robots/: arm_standalone.urdf  biped.urdf  biped_test.xacro  leg_test.urdf  leg_test2.urdf  target_indicator.urdf
robots/lobot_arm/: model.config  model.sdf
robots/lobot_h3p/: model.config  model.sdf
src/: joint_state_pub.cpp  tf_publish_node.cpp
urdf/: materials.urdf.xacro
urdf/arm/: arm.transmission.xacro  arm.urdf.xacro
urdf/leg/: leg.transmission.xacro  leg.urdf.xacro
urdf/test_leg/: leg1.urdf.xacro  reemc_leg.urdf.xacro
worlds/: arm_world.sdf  gym_zero_g_world.sdf  world1.sdf  zero_g_world.sdf
