cmake_minimum_required(VERSION 3.5)
project(lobot_description)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(tf_pub_lobot src/tf_publish_node.cpp)
ament_target_dependencies(tf_pub_lobot rclcpp tf2_ros)

add_executable(joint_state_pub src/joint_state_pub.cpp)
ament_target_dependencies(joint_state_pub rclcpp sensor_msgs)


install(TARGETS 
  tf_pub_lobot
  joint_state_pub
  DESTINATION lib/${PROJECT_NAME})

install(DIRECTORY
  launch
  robots
  urdf
  gazebo
  DESTINATION share/${PROJECT_NAME}/
)
ament_package()
